--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,16 @@
 {
   "strictLineBreaks": true,
   "showFrontmatter": false,
-  "showLineNumber": false
+  "showLineNumber": false,
+  "newFileLocation": "folder",
+  "newFileFolderPath": "_posts",
+  "attachmentFolderPath": "imgs",
+  "userIgnoreFilters": [
+    "_layouts/",
+    "blog/",
+    "css/",
+    "fonts/",
+    "js/",
+    "photos/"
+  ]
 }
